Move to OfflinePlayer + UUID instead of username